crates/alba-shell/src/snapshots/alba_shell__parser__tests__and_and_or_are_left_associative_and_equal_precedence.snap
---
source: crates/alba-shell/src/parser.rs
expression: "ast(\"a && b || c && d\")"
---
Program {
    items: [
        AndOrList {
            first: Pipeline {
                negated: false,
                commands: [
                    Command {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Text(
                                        "a",
                                    ),
                                ],
                                span: Span {
                                    start: 0,
                                    end: 1,
                                },
                            },
                        ],
                        redirects: [],
                        span: Span {
                            start: 0,
                            end: 1,
                        },
                    },
                ],
            },
            rest: [
                (
                    And,
                    Pipeline {
                        negated: false,
                        commands: [
                            Command {
                                assignments: [],
                                words: [
                                    Word {
                                        parts: [
                                            Text(
                                                "b",
                                            ),
                                        ],
                                        span: Span {
                                            start: 5,
                                            end: 6,
                                        },
                                    },
                                ],
                                redirects: [],
                                span: Span {
                                    start: 5,
                                    end: 6,
                                },
                            },
                        ],
                    },
                ),
                (
                    Or,
                    Pipeline {
                        negated: false,
                        commands: [
                            Command {
                                assignments: [],
                                words: [
                                    Word {
                                        parts: [
                                            Text(
                                                "c",
                                            ),
                                        ],
                                        span: Span {
                                            start: 10,
                                            end: 11,
                                        },
                                    },
                                ],
                                redirects: [],
                                span: Span {
                                    start: 10,
                                    end: 11,
                                },
                            },
                        ],
                    },
                ),
                (
                    And,
                    Pipeline {
                        negated: false,
                        commands: [
                            Command {
                                assignments: [],
                                words: [
                                    Word {
                                        parts: [
                                            Text(
                                                "d",
                                            ),
                                        ],
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                        },
                                    },
                                ],
                                redirects: [],
                                span: Span {
                                    start: 15,
                                    end: 16,
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    ],
}
