crates/alba-shell/src/snapshots/alba_shell__parser__tests__parses_sequencing_and_and_or.snap
---
source: crates/alba-shell/src/parser.rs
expression: "ast(\"a; b && c || d\")"
---
Program {
    items: [
        AndOrList {
            first: Pipeline {
                negated: false,
                commands: [
                    Command {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Text(
                                        "a",
                                    ),
                                ],
                                span: Span {
                                    start: 0,
                                    end: 1,
                                },
                            },
                        ],
                        redirects: [],
                        span: Span {
                            start: 0,
                            end: 1,
                        },
                    },
                ],
            },
            rest: [],
        },
        AndOrList {
            first: Pipeline {
                negated: false,
                commands: [
                    Command {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Text(
                                        "b",
                                    ),
                                ],
                                span: Span {
                                    start: 3,
                                    end: 4,
                                },
                            },
                        ],
                        redirects: [],
                        span: Span {
                            start: 3,
                            end: 4,
                        },
                    },
                ],
            },
            rest: [
                (
                    And,
                    Pipeline {
                        negated: false,
                        commands: [
                            Command {
                                assignments: [],
                                words: [
                                    Word {
                                        parts: [
                                            Text(
                                                "c",
                                            ),
                                        ],
                                        span: Span {
                                            start: 8,
                                            end: 9,
                                        },
                                    },
                                ],
                                redirects: [],
                                span: Span {
                                    start: 8,
                                    end: 9,
                                },
                            },
                        ],
                    },
                ),
                (
                    Or,
                    Pipeline {
                        negated: false,
                        commands: [
                            Command {
                                assignments: [],
                                words: [
                                    Word {
                                        parts: [
                                            Text(
                                                "d",
                                            ),
                                        ],
                                        span: Span {
                                            start: 13,
                                            end: 14,
                                        },
                                    },
                                ],
                                redirects: [],
                                span: Span {
                                    start: 13,
                                    end: 14,
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    ],
}
