crates/alba-shell/src/snapshots/alba_shell__parser__tests__rejects_a_redirect_without_target.snap
---
source: crates/alba-shell/src/parser.rs
expression: "err(\"echo hi >\")"
---
error: expected a file after `>`
  │ echo hi >
  │         ^
