crates/alba-shell/src/snapshots/alba_shell__parser__tests__rejects_a_trailing_operator.snap
---
source: crates/alba-shell/src/parser.rs
expression: "err(\"a &&\")"
---
error: expected a command after `&&`
  │ a &&
  │   ^^
