crates/alba-shell/src/snapshots/alba_shell__parser__tests__rejects_case_statements.snap
---
source: crates/alba-shell/src/parser.rs
expression: "err(\"case $x in a) echo a;; esac\")"
---
error: subshells, function definitions, and `case` patterns are not supported
  │ case $x in a) echo a;; esac
  │             ^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
