crates/alba-shell/src/snapshots/alba_shell__parser__tests__rejects_for_loops.snap
---
source: crates/alba-shell/src/parser.rs
expression: "err(\"for f in *.rs; do echo $f; done\")"
---
error: `for` loops are not supported by the embedded shell
  │ for f in *.rs; do echo $f; done
  │ ^^^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
