crates/alba-shell/src/snapshots/alba_shell__parser__tests__rejects_function_definitions.snap
---
source: crates/alba-shell/src/parser.rs
expression: "err(\"greet() { echo hi; }\")"
---
error: subshells and function definitions are not supported
  │ greet() { echo hi; }
  │      ^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
